reduce z-index for fixing scroll bug

--- a/src/component/cursor.scss
+++ b/src/component/cursor.scss
@@ -24,14 +24,14 @@ html {
   background-color: #ec2026;
   height: 5px;
   width: 5px;
-  z-index: 99999;
+  z-index: 9999;
   &.loader {
     background-color: transparent;
     &:before {
       display: block;
-      content: "wait";
+      content: 'wait';
       color: #fff;
-      font: 400 normal 8px/8px "Graphik";
+      font: 400 normal 8px/8px 'Graphik';
       text-transform: uppercase;
       letter-spacing: 2px;
       mix-blend-mode: difference;
@@ -47,7 +47,7 @@ html {
   border: 1px solid white;
   height: 30px;
   width: 30px;
-  z-index: 99998;
+  z-index: 9998;
   -webkit-transition: transform 0.3s ease-out;
   -moz-transition: transform 0.3s ease-out;
   -o-transition: transform 0.3s ease-out;
@@ -68,7 +68,7 @@ html {
     animation: load2 1.5s infinite ease;
     background: white;
     border: none;
-    z-index: 999999;
+    z-index: 10000;
   }
 }
 
