--- a/src/component/loading.scss
+++ b/src/component/loading.scss
@@ -2,7 +2,7 @@
   position: absolute;
   left: 0;
   top: 0;
-  z-index: 20000;
+  z-index: 10010;
   width: 100%;
   height: 100vh;
   background: #182338;
